# py-cid

./: .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  MANIFEST.in  Makefile  README.rst  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini  travis_pypi_setup.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
cid/: __init__.py  base58.py  builder.py  cid.py  prefix.py  set.py
docs/: .gitignore  Makefile  api_reference.rst  conf.py  index.rst  installation.rst  make.bat  usage.rst
newsfragments/: 40-internal.rst  40-misc.rst  45.feature.rst  46.internal.rst  47.feature.rst  48.breaking.rst  48.feature.rst  48.internal.rst  52.internal.rst  60.feature.rst  README.md  validate_files.py
stubs/: cid.pyi
tests/: __init__.py  test_cid.py  test_new_features.py  test_prefix.py
